# csse4011-thor-gold

./: .gitignore  README.md  requirements.txt
esp/: CMakeLists.txt  sdkconfig.ci
esp/src/: Project.code-workspace  main.c  test.txt
ml_model/: data_collector.py  ml_model.py  ml_training.py  model_visualiser.py  readData_AWR1843.py  training_data_collector.py  tuned-radar.cfg
mmw_radar/: README.md  params.md  readData_AWR1843.py  tuned-radar.cfg
oslib/: README.md
vga/: CMakeLists.txt  README.md  prj.conf
vga/inc/: vga_driver.h  vga_shell.h
vga/src/: main.c  vga_driver.c  vga_shell.c
vga/vga_node/: .mxproject  Makefile  STM32L475VGTx_FLASH.ld  vga_node.ioc
vga/vga_node/Core/Inc/: main.h  radar.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  vga.h
vga/vga_node/Core/Src/: main.c  radar.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  vga.c
